Web3Auth added. z-index fixed on modal. Not sure where the options are for setting like dark mode as it doesn't follow media tags. Removed all the old login code.

--- a/public/global.css
+++ b/public/global.css
@@ -61,3 +61,7 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+#w3a-modal {
+	z-index: 100;
+}
